[0.1.2] beta, hover char shows series

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Best Girl Tierlist",
-  "name": "Best Girl Tierlist",
+  "short_name": "Best Girl Tierlist v0",
+  "name": "Best Girl Tierlist v0",
   "icons": [
     {
       "src": "favicon.ico",
