--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tierlist",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "homepage": "https://tsimplet.github.io/tierlist",
   "private": true,
   "dependencies": {
@@ -15,6 +15,7 @@
     "muuri": "^0.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
